[package]
name = "lcmspector-backend"
version = "0.1.2"
edition = "2021"

[dependencies]
memmap2 = "0.9.7"
mmap = "0.1.1"
mzdata = "0.56.0"
rayon = "1.10.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
ndarray = { version = "0.16.1", features = ["serde"] }
tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3"
indicatif = { version = "0.18.0", features = ["rayon"] }
